testsuite/tests/contrib/lkt_semantic/invalid_enum_ref/test.lkt
@invalid val a: NoSuchType.T = raise PropertyError
