testsuite/tests/contrib/lkt_semantic/invalid_enum_ref/test.out
Resolving test.lkt
==================
test.lkt:1:17: error: Cannot find entity `NoSuchType` in this scope
1 | @invalid val a: NoSuchType.T = raise PropertyError
  |                 ^^^^^^^^^^

Id   <RefId "PropertyError" test.lkt:1:38-1:51>
     references <StructDecl prelude: "PropertyError">

